; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser-new.c_tl_get_function.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser-new.c_tl_get_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_constructor = type { i8* }

@tl_function_tree = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tl_constructor* @tl_get_function(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.tl_constructor, align 8
  %7 = alloca %struct.tl_constructor**, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i8* @mystrdup(i8* %8, i32 %9)
  store i8* %10, i8** %5, align 8
  %11 = getelementptr inbounds %struct.tl_constructor, %struct.tl_constructor* %6, i32 0, i32 0
  %12 = load i8*, i8** %5, align 8
  store i8* %12, i8** %11, align 8
  %13 = load i32, i32* @tl_function_tree, align 4
  %14 = call %struct.tl_constructor** @tree_lookup_value_tl_constructor(i32 %13, %struct.tl_constructor* %6)
  store %struct.tl_constructor** %14, %struct.tl_constructor*** %7, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %4, align 4
  %17 = add nsw i32 %16, 1
  %18 = call i32 @zfree(i8* %15, i32 %17)
  %19 = load %struct.tl_constructor**, %struct.tl_constructor*** %7, align 8
  %20 = icmp ne %struct.tl_constructor** %19, null
  br i1 %20, label %21, label %24

21:                                               ; preds = %2
  %22 = load %struct.tl_constructor**, %struct.tl_constructor*** %7, align 8
  %23 = load %struct.tl_constructor*, %struct.tl_constructor** %22, align 8
  br label %25

24:                                               ; preds = %2
  br label %25

25:                                               ; preds = %24, %21
  %26 = phi %struct.tl_constructor* [ %23, %21 ], [ null, %24 ]
  ret %struct.tl_constructor* %26
}

declare dso_local i8* @mystrdup(i8*, i32) #1

declare dso_local %struct.tl_constructor** @tree_lookup_value_tl_constructor(i32, %struct.tl_constructor*) #1

declare dso_local i32 @zfree(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
